<resources>
    <string name="app_name">FlexiReader</string>
    <string name="text_feed">FlexiReader</string>
    <string name="text_title">This item did not provide a title …</string>
    <string name="text_desc">This item did not provide a description …</string>
    <string name="text_date">This item did not provide a date …</string>
    <string name="image_description">Image description</string>
    <string name="enter_title">Enter feed name</string>
    <string name="enter_desc">http://www.somefeed.com/rss/</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="add_record">Add Record</string>
    <string name="feeds_add_name">Give your feed a name</string>
    <string name="feeds_add_link">You must enter a link</string>
    <string name="feeds_add_link_error">Your link does not seem to be correct</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">FlexiReader</string>
    <string name="nav_header_subtitle">Fast, safe, secure</string>

    <string name="drawer_settings">Settings</string>

    <!-- Strings related to Settings -->

    <string name="shareFRtext">I would like to share FlexiReader with you. Click the link below.</string>
    <string name="shareFRlink">https://play.google.com/store/apps/details?id=org.armstrong.ika.FlexiReader</string>

    <string name="hint_reference">name</string>
    <string name="hint_note">link</string>
    <string name="url_empty">URL address is empty</string>
    <string name="feed_empty">FeedID is empty</string>
    <string name="url_invalid">URL is invalid</string>
    <string name="share_title">Share</string>
    <string name="blank"></string>
    <string name="about">About</string>
    <string name="add_feed">Add Feed</string>
    <string name="error">Error!</string>
    <string name="okay">OKAY</string>
    <string name="news_feeds">News Feeds</string>
    <string name="items">items</string>
    <string name="list">List</string>
    <string name="modify_feed">Modify Feed</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="more">More</string>
    <string name="edit_news">Edit News Feeds</string>
    <string name="color_picker">Colour Picker</string>
    <string name="color_picker_style">Colour Picker Style</string>
    <string name="images">Images On/Off</string>
    <string name="text_size">Text Size</string>
    <string name="share">Share FlexiReader</string>
    <string name="cancel">CANCEL</string>
    <string name="share_with">Share FlexiReader with:</string>
    <string name="small">Small</string>
    <string name="large">Large</string>
    <string name="medium">Medium</string>
    <string name="xlarge">Xlarge</string>


</resources>
